# Templates

./: .gitattributes  .gitignore  .pre-commit-config.yaml  pyproject.toml  test_example.py
.github/scripts/: ai_review.py
.github/workflows/: ai-code-review.yml  format.yml  ruff.yml  test.yml
